Simplify image scaling calculations, fix CSS overflow bug

--- a/Source/mediaboxAdv-Dark.css
+++ b/Source/mediaboxAdv-Dark.css
@@ -1,8 +1,8 @@
-		/*	mediaboxAdvanced Dark theme	*/
-		/*	version 2.6 - June 2011			*/
-		/*	for mediaboxAdvanced v.1.5.x	*/
+/*	mediaboxAdvanced Dark theme	*/
+/*	version 2.6 - June 2011		*/
+/*	for mediaboxAdvanced v.1.5.x	*/
 
-		/*	Overlay background styling	*/
+/*	Overlay background styling	*/
 
 #mbOverlay {
 	position: fixed;
@@ -10,7 +10,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 150%;
+	height: 100%;
 	background-color: #000;
 	cursor: pointer;
 }
@@ -18,7 +18,7 @@
 		/*	Fixes for older or limited browsers	*/
 
 #mbOverlay.mbOverlayOpaque {
-	background: transparent url(80.png) repeat;
+	background: transparent url('/images/mediabox/80.png') repeat;
 }
 
 #mbOverlay.mbOverlayAbsolute {
@@ -27,7 +27,7 @@
 
 #mbOverlay.mbMobile {
 	position: absolute;
-	background-color: transparent;
+/*	background-color: transparent; */
 }
 
 #mbBottom.mbMobile {
@@ -55,8 +55,13 @@
 	box-shadow: 0px 5px 20px rgba(0,0,0,0.50);
 }
 
+#mbContainer {
+	overflow: hidden;
+	position: relative;
+}
+
 #mbCenter.mbLoading {
-	background: #000 url(loading-dark.gif) no-repeat center;
+	background: #000 url('/images/mediabox/loading2.gif') no-repeat center;
 		/*	This style is applied only during animation.	*/
 		/*	For example, the next lines turn off shadows	*/
 		/*	improving browser performance on slow systems.	*/
@@ -71,9 +76,6 @@
 	position: relative;
 	left: 0;
 	top: 0;
-
-		/*	Inline content styling	*/
-
 	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	line-height: 20px;
 	font-size: 12px;
@@ -86,16 +88,24 @@
 		/*	Title, Caption and Button styling	*/
 
 #mbBottom {
-	line-height: 20px;
-	font-size: 12px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	background: transparent url('/images/mediabox/80.png') repeat;
+/*	line-height: 20px; */
+	font-size: 11pt;
 	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	text-align: left;
-	color: #999;
-	min-height: 20px;
-	padding: 10px 0 0;
+	color: #fff;
+/*	min-height: 20px; */
+	height: auto;
+	padding: 10px;
+	width: 100%;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
 
-#mbTitle, #mbPrevLink, #mbNextLink, #mbCloseLink {
+#mbTitle, #mbPrevLink, #mbNextLink {
 	display: inline;
 	color: #fff;
 	font-weight: bold;
@@ -116,7 +126,7 @@
 	font-size: 0.8em;
 }
 
-#mbPrevLink, #mbNextLink, #mbCloseLink {
+#mbPrevLink, #mbNextLink {
 	float: right;
 	outline: none;
 	margin: 0 0 0 10px;
@@ -129,11 +139,22 @@
 	text-decoration: underline;
 }
 
-#mbPrevLink big, #mbNextLink big, #mbCloseLink big {
+#mbPrevLink big, #mbNextLink big, #mbCloseLink {
 	color: #eee;
-	font-size: 1.4em;
+	font-size: 2.0em;
 /*	line-height: 0.9em;*/
 	font-weight: bold;
+	text-decoration: none;
+}
+
+#mbCloseLink {
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin-right: -0.8em;
+	width: 0.8em;
+	font-size: 24pt;
+	overflow: hidden;
 }
 
 #mbBottom a, #mbBottom a:link, #mbBottom a:visited {	/* Thanks to Danny Jung for feedback and corrections */
